Air Bnb Experience app added

--- a/index.html
+++ b/index.html
@@ -128,34 +128,67 @@
       <p class="section__subtitle--projects">Awesome projects collection!</p>
       <div class="portfolio">
         <!-- Portfolio item no 1 -->
-        <a
-          href="./COFFEE POINT/coffeeAddict.html"
-          target="_blank"
-          class="porfolio__item"
-        >
-          <img src="./img/10.png" alt="yoo image" class="portfolio__img" />
-        </a>
-        <a
-          href="./Lohri_danceStudio/lohriBeats.html"
-          class="porfolio__item"
-          target="_blank"
-        >
-          <img src="./img/20.png" alt="yoo image" class="portfolio__img" />
-        </a>
-        <a
-          href="./BlackJack Casino/BlackJack.html"
-          target="_blank"
-          class="porfolio__item"
-        >
-          <img src="./img/30.png" alt="yoo image" class="portfolio__img" />
-        </a>
-        <a
-          href="./Peoplecounter/peoplecounter.html"
-          class="porfolio__item"
-          target="_blank"
-        >
-          <img src="./img/40.png" alt="yoo image" class="portfolio__img" />
-        </a>
+        <div class="portfolio__block">
+          <a
+            href="https://tranquil-lolly-18b477.netlify.app/"
+            target="_blank"
+            class="porfolio__item"
+          >
+            <img
+              src="./img/Airbnb logo.png"
+              alt="yoo image"
+              class="portfolio__img"
+            />
+          </a>
+          <p>Airbnb Experiences</p>
+          <!-- Portfolio item no 1 -->
+        </div>
+        <div class="portfolio__block">
+          <a
+            href="./COFFEE POINT/coffeeAddict.html"
+            target="_blank"
+            class="porfolio__item"
+          >
+            <img src="./img/10.png" alt="yoo image" class="portfolio__img" />
+          </a>
+          <p>The Coffee House</p>
+        </div>
+
+        <!-- Portfolio item no 2-->
+        <div class="portfolio__block">
+          <a
+            href="./Lohri_danceStudio/lohriBeats.html"
+            class="porfolio__item"
+            target="_blank"
+          >
+            <img src="./img/20.png" alt="yoo image" class="portfolio__img" />
+          </a>
+          <p>Lohri Beats</p>
+        </div>
+
+        <!-- Portfolio item no 3 -->
+        <div class="portfolio__block">
+          <a
+            href="./BlackJack Casino/BlackJack.html"
+            target="_blank"
+            class="porfolio__item"
+          >
+            <img src="./img/30.png" alt="yoo image" class="portfolio__img" />
+          </a>
+          <p>BlackJack Game</p>
+        </div>
+
+        <!-- Portfolio item no 4 -->
+        <div class="portfolio__block">
+          <a
+            href="./Peoplecounter/peoplecounter.html"
+            class="porfolio__item"
+            target="_blank"
+          >
+            <img src="./img/40.png" alt="yoo image" class="portfolio__img" />
+          </a>
+          <p>People Counter App</p>
+        </div>
       </div>
     </section>
 
