--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
             ><i class="fab fa-twitter"></i
           ></a>
         </li>
-        <li class="social-list__item">
+        <!-- <li class="social-list__item">
           <a
             class="social-list__link"
             href="https://www.google.co.in/webhp?authuser=1"
             target="_blank"
             ><i class="fab fa-facebook"></i
           ></a>
-        </li>
+        </li> -->
         <li class="social-list__item">
           <a
             class="social-list__link"
