MemeGenerator added from React file

--- a/index.html
+++ b/index.html
@@ -127,7 +127,23 @@
       <h2 class="section__title">Projects</h2>
       <p class="section__subtitle--projects">Awesome projects collection!</p>
       <div class="portfolio">
-        <!-- Portfolio item no 1 -->
+        <!-- Portfolio item no 1  -->
+        <div class="portfolio__block">
+          <a
+            href="https://meme-generator342.netlify.app"
+            target="_blank"
+            class="porfolio__item"
+          >
+            <img
+              src="./img/meme.png"
+              alt="Meme Generator"
+              class="portfolio__img"
+            />
+          </a>
+          <p>Meme Generator</p>
+        </div>
+
+        <!-- Portfolio item no 2 -->
         <div class="portfolio__block">
           <a
             href="https://tranquil-lolly-18b477.netlify.app/"
@@ -141,7 +157,7 @@
             />
           </a>
           <p>Airbnb Experiences</p>
-          <!-- Portfolio item no 1 -->
+          <!-- Portfolio item no 3 -->
         </div>
         <div class="portfolio__block">
           <a
@@ -154,7 +170,7 @@
           <p>The Coffee House</p>
         </div>
 
-        <!-- Portfolio item no 2-->
+        <!-- Portfolio item no 4-->
         <div class="portfolio__block">
           <a
             href="./Lohri_danceStudio/lohriBeats.html"
@@ -166,7 +182,7 @@
           <p>Lohri Beats</p>
         </div>
 
-        <!-- Portfolio item no 3 -->
+        <!-- Portfolio item no 5 -->
         <div class="portfolio__block">
           <a
             href="./BlackJack Casino/BlackJack.html"
@@ -178,7 +194,7 @@
           <p>BlackJack Game</p>
         </div>
 
-        <!-- Portfolio item no 4 -->
+        <!-- Portfolio item no 6 -->
         <div class="portfolio__block">
           <a
             href="./Peoplecounter/peoplecounter.html"
